--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-dashboard-new",
+  "name": "monedar-admin",
   "version": "0.1.0",
   "private": true,
   "resolutions": {
@@ -106,7 +106,7 @@
     "server": "node server/start.js",
     "dev": "cross-env NODE_ENV=development run-p server start"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://monedadmin.netlify.app:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
