--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "css-loader": "2.1.1",
     "dotenv": "^8.2.0",
     "dotenv-expand": "5.1.0",
@@ -57,6 +58,7 @@
     "jest-watch-typeahead": "0.4.0",
     "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "0.8.0",
+    "mongoose": "^5.10.10",
     "mysql2": "^2.2.5",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
@@ -106,7 +108,6 @@
     "server": "node server/start.js",
     "dev": "cross-env NODE_ENV=development run-p server start"
   },
-  "proxy": "https://monedadmin.netlify.app:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
